@startuml
class User [[java:infectiontracer.core.User]] {
	-String forename
	-String lastname
	-String email
	-String password
	-String dateOfInfection
	-String healthStatus
	-List<String> closeContacts
	+User(String forename, String lastname, String email, String password, String healthStatus, String dateOfInfection)
	+User()
	+User(String forename, String lastname, String email, String password, String dateOfInfection, String healthStatus, List<String> allCloseContacts)
	+void setDateOfInfected()
	+void setDateOfHealthy()
	+String getDateOfInfection()
	+void setInfected()
	+void setHealthy()
	+String getHealthStatus()
	-boolean checkIfUserAlreadyExistsAsCloseContact(String email)
	+void addCloseContact(String user)
	+void removeCloseContact(String user)
	+List<String> getAllCloseContacts()
	+void setForename(String forename)
	+String getForename()
	+void setLastname(String lastname)
	+String getLastname()
	+void setEmail(String email)
	+String getEmail()
	+void setPassword(String password)
	+String getPassword()
	+String toString()
	+boolean equals(Object obj)
	+int hashCode()
}
class InfectionTracer [[java:infectiontracer.core.InfectionTracer]] {
	-FileHandler fileHandler
	+void setPath(String path)
	+void addCloseContact(String userEmail, String closeContactEmail)
	+void removeCloseContact(String userEmail, String closeContactEmail)
	+void makeUserInfected(String username)
	+void makeUserHealthy(String username)
	+List<User> getUsersCloseContacts(String username)
	+User getActiveUser(String username)
	+Boolean checkUserList(String userEmail, List<User> userList)
	+void deleteUser(String username)
	+void addUser(User newUser)
	+List<User> getUsers()
	+void changePw(String username)
	+void editUser(User changedUser)
	+void sendEmailToCloseContacts(User user)
}
class EmailService [[java:infectiontracer.core.EmailService]] {
	-{static}String from
	-{static}String pw
	-{static}String host
	+void sendEmail(String currentUser, List<String> closecontacts)
	#String getRandomGeneratedPassword()
	+String sendEmailWithNewPassword(String currentUser)
}

class FileHandler [[java:infectiontracer.json.FileHandler]] {
	~String filePath
	~Gson gson
	+FileHandler()
	+void setFilePath(String filePath)
	+List<User> getUsers()
	+void writeUsersToFile(List<User> userList)
	+User jsonToUser(String userJson)
	+List<User> jsonToUserList(String userListJson)
	+String userToJson(User user)
}

InfectionTracer --> FileHandler
InfectionTracer ..> User
InfectionTracer ..> EmailService
FileHandler ..> User
@enduml